[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/light_texture.png" type="Texture" id=1]
[ext_resource path="res://src/UI/Main Menu UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scenes/Main Menu.gd" type="Script" id=3]
[ext_resource path="res://src/Scenes/DeskLamp.gd" type="Script" id=4]
[ext_resource path="res://Assets/256836__deleted-user-4772965__light-switch-off-3.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Scenes/VersionInfo.gd" type="Script" id=6]
[ext_resource path="res://src/Scenes/PopSelect.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "flicker"
length = 10.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 11.7, -0.25, 0, 0.25, 0, 4.98, -0.25, 0, 0.25, 0, 14.46, -0.25, 0, 0.25, 0, 6.75, -0.25, 0, 0.25, 0, 11.04, -0.25, 0, 0.25, 0, 3.93, -0.25, 0, 0.25, 0, 11.44, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.8, 2.4, 3, 5.1, 5.6, 7.4 )
}

[sub_resource type="Animation" id=2]
resource_name = "turn_off"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 14.34, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("turnOff:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Main Menu" type="Node"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -50

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -49

[node name="StarField" type="CPUParticles2D" parent="CanvasLayer2"]
scale = Vector2( 2, 2 )
amount = 500
lifetime = 20.0
preprocess = 50.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 500 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0

[node name="New Game Window" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="New Game Window"]
margin_left = 505.0
margin_top = 293.0
margin_right = 519.0
margin_bottom = 307.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainSplit" type="VSplitContainer" parent="New Game Window/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 253.0
margin_bottom = 221.0

[node name="TopBar" type="HSplitContainer" parent="New Game Window/PanelContainer/MainSplit"]
margin_right = 246.0
margin_bottom = 20.0

[node name="NGLabel" type="Label" parent="New Game Window/PanelContainer/MainSplit/TopBar"]
margin_top = 3.0
margin_right = 74.0
margin_bottom = 17.0
text = "New Game:"

[node name="BackButton" type="Button" parent="New Game Window/PanelContainer/MainSplit/TopBar"]
margin_left = 86.0
margin_right = 246.0
margin_bottom = 20.0
text = "Back"

[node name="ContentSplit" type="VSplitContainer" parent="New Game Window/PanelContainer/MainSplit"]
margin_top = 32.0
margin_right = 246.0
margin_bottom = 214.0

[node name="OptionsScroll" type="ScrollContainer" parent="New Game Window/PanelContainer/MainSplit/ContentSplit"]
margin_right = 246.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
scroll_horizontal_enabled = false

[node name="Options" type="VSplitContainer" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll"]
margin_right = 234.0
margin_bottom = 216.0

[node name="Presets" type="VSplitContainer" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options"]
margin_right = 234.0
margin_bottom = 46.0

[node name="PresetsLabel" type="Label" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/Presets"]
margin_right = 234.0
margin_bottom = 14.0
text = "Presets:"

[node name="PresetsGrid" type="GridContainer" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/Presets"]
margin_top = 26.0
margin_right = 234.0
margin_bottom = 46.0
columns = 5

[node name="StanButton" type="Button" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/Presets/PresetsGrid"]
margin_right = 67.0
margin_bottom = 20.0
text = "Standard"

[node name="SCPButton" type="Button" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/Presets/PresetsGrid"]
margin_left = 71.0
margin_right = 106.0
margin_bottom = 20.0
text = "SCP"

[node name="PresentButton" type="Button" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/Presets/PresetsGrid"]
margin_left = 110.0
margin_right = 171.0
margin_bottom = 20.0
text = "Present"

[node name="OptionsBox" type="VBoxContainer" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options"]
margin_top = 58.0
margin_right = 234.0
margin_bottom = 216.0

[node name="OptionsLabel" type="Label" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox"]
margin_right = 234.0
margin_bottom = 14.0
text = "Options:"

[node name="PopSplit" type="HSplitContainer" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox"]
margin_top = 18.0
margin_right = 234.0
margin_bottom = 38.0

[node name="PopLabel" type="Label" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/PopSplit"]
margin_top = 3.0
margin_right = 125.0
margin_bottom = 17.0
text = "Population Density:"

[node name="PopSelect" type="OptionButton" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/PopSplit"]
margin_left = 137.0
margin_right = 234.0
margin_bottom = 20.0
text = "Population"
script = ExtResource( 7 )

[node name="FounderSplit" type="HSplitContainer" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox"]
margin_top = 42.0
margin_right = 234.0
margin_bottom = 62.0

[node name="FounderLabel" type="Label" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/FounderSplit"]
margin_top = 3.0
margin_right = 88.0
margin_bottom = 17.0
text = "Founder Trait:"

[node name="FTSelect" type="OptionButton" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/FounderSplit"]
margin_left = 100.0
margin_right = 234.0
margin_bottom = 20.0

[node name="TechSplit" type="HSplitContainer" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox"]
margin_top = 66.0
margin_right = 234.0
margin_bottom = 86.0

[node name="TechLabel" type="Label" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/TechSplit"]
margin_top = 3.0
margin_right = 72.0
margin_bottom = 17.0
text = "Tech Level:"

[node name="TechSelect" type="OptionButton" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/TechSplit"]
margin_left = 84.0
margin_right = 234.0
margin_bottom = 20.0

[node name="EcoSplit" type="HSplitContainer" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox"]
margin_top = 90.0
margin_right = 234.0
margin_bottom = 110.0

[node name="EcoLabel" type="Label" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/EcoSplit"]
margin_top = 3.0
margin_right = 100.0
margin_bottom = 17.0
text = "Economy Level:"

[node name="EcoSelect" type="OptionButton" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/EcoSplit"]
margin_left = 112.0
margin_right = 234.0
margin_bottom = 20.0

[node name="CompSplit" type="HSplitContainer" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox"]
margin_top = 114.0
margin_right = 234.0
margin_bottom = 134.0

[node name="CompLabel" type="Label" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/CompSplit"]
margin_top = 3.0
margin_right = 79.0
margin_bottom = 17.0
text = "Competition"

[node name="CompSelect" type="OptionButton" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/CompSplit"]
margin_left = 91.0
margin_right = 234.0
margin_bottom = 20.0

[node name="SettingsSplit" type="HSplitContainer" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox"]
margin_top = 138.0
margin_right = 234.0
margin_bottom = 158.0

[node name="SettingsLabel" type="Label" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/SettingsSplit"]
margin_top = 3.0
margin_right = 97.0
margin_bottom = 17.0
text = "Game Settings:"

[node name="GSSelect" type="OptionButton" parent="New Game Window/PanelContainer/MainSplit/ContentSplit/OptionsScroll/Options/OptionsBox/SettingsSplit"]
margin_left = 109.0
margin_right = 234.0
margin_bottom = 20.0

[node name="StartButton" type="Button" parent="New Game Window/PanelContainer/MainSplit/ContentSplit"]
margin_top = 162.0
margin_right = 246.0
margin_bottom = 182.0
text = "Start"

[node name="Main Menu UI" parent="." instance=ExtResource( 2 )]

[node name="DeskLamp" type="Light2D" parent="."]
visible = false
position = Vector2( 791, 214 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
energy = 14.34
range_layer_min = -50
range_layer_max = 50
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DeskLamp"]
anims/flicker = SubResource( 1 )
anims/turn_off = SubResource( 2 )

[node name="turnOff" type="AudioStreamPlayer2D" parent="DeskLamp"]
position = Vector2( 67.7559, 53.865 )
scale = Vector2( 0.5, 0.5 )
stream = ExtResource( 5 )

[node name="VersionInfo" type="Node" parent="."]
script = ExtResource( 6 )

[node name="VI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VICont" type="PopupPanel" parent="VI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -170.0
margin_right = 104.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VISplit" type="VSplitContainer" parent="VI/VICont"]
margin_left = 4.0
margin_top = 4.0
margin_right = 204.0
margin_bottom = 336.0
dragger_visibility = 1

[node name="HSplitContainer" type="HSplitContainer" parent="VI/VICont/VISplit"]
margin_right = 200.0
margin_bottom = 20.0
dragger_visibility = 2

[node name="VINameLabel" type="Label" parent="VI/VICont/VISplit/HSplitContainer"]
margin_top = 3.0
margin_right = 81.0
margin_bottom = 17.0
text = "Version Info:"

[node name="VIHideButton" type="Button" parent="VI/VICont/VISplit/HSplitContainer"]
margin_left = 81.0
margin_right = 200.0
margin_bottom = 20.0
text = "X"

[node name="VScrollBar" type="ScrollContainer" parent="VI/VICont/VISplit"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 332.0
rect_min_size = Vector2( 200, 300 )
scroll_horizontal_enabled = false

[node name="VIDataLabel" type="Label" parent="VI/VICont/VISplit/VScrollBar"]
margin_bottom = 14.0

[connection signal="pressed" from="Main Menu UI/MenuContainer/VBoxContainer/VersionButton" to="." method="_on_VersionButton_pressed"]
[connection signal="pressed" from="Main Menu UI/MenuContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="animation_finished" from="DeskLamp/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="VI/VICont/VISplit/HSplitContainer/VIHideButton" to="." method="_on_VIHideButton_pressed"]

[editable path="Main Menu UI"]
